--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "less-loader": "^4.0.3",
     "lodash": "^4.17.4",
     "method-override": "^2.3.8",
+    "moment": "^2.22.1",
     "mongoose": "^4.9.3",
     "mongoose-autopopulate": "^0.5.0",
     "mongoose-autorefs": "^1.0.5",
