--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "reselect": "^3.0.1",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.6",
+    "serialize-javascript": "^1.5.0",
     "slackbots": "^1.0.2",
     "style-loader": "^0.19.0",
     "url-loader": "^0.5.8",
