--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "UW-STF-Refresh",
-  "version": "0.0.4",
+  "name": "TMO-IOT-Hackathon",
+  "version": "0.0.1",
   "description": "Full-stack webapp with universal React & Redux, Hot Reloading, Time Travel Debugging and Modular CSS. Featuring Ant Design, the UW Brand and integration with Shibboleth Auth w/ an alternative (Google OAuth) in development. Built with prime consideration for scalability, practicality and agile feature development.",
   "repository": "https://github.com/RcKeller/STF-Refresh",
   "main": "index.js",
@@ -65,7 +65,6 @@
     "cookie-parser": "^1.4.3",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.0",
-    "cuid": "^1.3.8",
     "eslint-config-standard": "^10.2.1",
     "eslint-config-standard-react": "^5.0.0",
     "eslint-plugin-node": "^5.0.0",
@@ -94,9 +93,6 @@
     "node-sass": "^4.5.3",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "passport-tmobileid": "^0.1.1",
-    "passport-uwshib": "^0.1.2",
     "pluralize": "^5.0.0",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.0.0",
@@ -131,7 +127,6 @@
     "slackbots": "^1.0.2",
     "style-loader": "^0.19.0",
     "url-loader": "^0.5.8",
-    "uuid": "^3.1.0",
     "webpack": "3.0.0",
     "webpack-dev-middleware": "1.11.0",
     "webpack-hot-middleware": "^2.18.0",
